Fix overflowing values in page-sidebar

--- a/frontend/src/app/components/name-value-pair/name-value-pair.scss
+++ b/frontend/src/app/components/name-value-pair/name-value-pair.scss
@@ -2,10 +2,12 @@ name-value-pair
 {
     display: flex;
     text-align: right;
+    word-break: break-word;
 
     .name-value-pair-name
     {
         margin-right: 1.5em;
+        word-break: normal;
 
         &[empty="true"]
         {
@@ -16,7 +18,7 @@ name-value-pair
     .name-value-pair-value
     {
         flex-grow: 1;
-
+        min-width: 0;
         user-select: text;
     }
 }
